# prueba

./: CMakeLists.txt  README.md  newWIndowFIle.txt  prueba.c  test.txt
lib/: CMakeLists.txt
src/: app.c  main.c
tests/: test_suma.c
